data/derived/sp14/progs/unify/prog0056.ml.out
Characters 84-96:
  | Sine m -> "sin"^exprToString;;
                    ^^^^^^^^^^^^
Error: This expression has type expr -> string
       but an expression was expected of type string
